project/test/semantics/bad/input/Bad65_shouldCheckReturnTypesOfSingletonGenericClassMemberMethods.ty
singleton class ValueGetter[A, B] {
    
    functions: {
        getValue: (x: A, y: B, z: A) -> A = x
    }
}

singleton class GenericTypes {
    
    actions: {
        main: () -> Int = {
            val x: Bool = ValueGetter[Int, Bool].getValue(40, 3 > 2, 50); // UnexpectedTypeError
        }
    }
}
